add utxo for explorer
